2007-09-05	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libmisc/Makefile.am: Add new files.

2007-09-05	Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* libmisc/monitor/mon-object.c,	
	* libmisc/monitor/monitor.h, libmisc/monitor/mon-part.c, 
	* libmisc/monitor/mon-region.c, libmisc/monitor/mon-sema.c, 
	* libmisc/monitor/mon-task, libmisc/Makefile.am: 
	Added functionality for osmonweb support

2007-09-04	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libmisc/monitor/mon-monitor.c, libmisc/monitor/mon-object.c,
	libmisc/monitor/monitor.h: Merge minor parts of Thomas' improvements
	that are needed by osmonweb.

2007-09-04	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libmisc/untar/untar.c, libmisc/untar/untar.h: Add const to char *.
	Use printk.

2007-08-28	Joel Sherrill <joel.sherrill@OARcorp.com>

	* rtems/include/rtems/rtems/clock.h, score/src/threadhandler.c: Fix
	spacing and spelling.

2007-08-28	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1256/networking
	* ftpd/ftpd.c: Fix unaligned access.

2007-08-28	Joel Sherrill <joel.sherrill@OARcorp.com>

	* posix/Makefile.am: Always build nanosleep.

2007-08-17	Chris Johns <chrisj@rtems.org>

	* libmisc/capture/README: Minor copyright change.
	* libmisc/capture/capture-cli.c, libmisc/capture/capture.c,
	libmisc/capture/capture.h: Fixed the memory leak when lots of
	tasks are being created and deleted. Improved the trigger
	interface so all task type actions can be caught.

2007-08-13	Chris Johns <chrisj@rtems.org>

	* score/include/rtems/score/object.h: Point the
	OBJECTS_RTEMS_CLASSES_LAST macro to the last entry.

2007-07-31	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1248/networking
	* libnetworking/rtems/rtems_glue.c: Luke Stras <luke@spacequest.com>
	reported that when no interfaces are successfully attached, the
	default route is broken and may result in a jump to an illegal
	address.

2007-07-31	Ralf Corsépius <ralf.corsepius@rtems.org>
